# cmake-utils

./: CMakeLists.txt  README.md
cmake/: macro.cmake
doc/: Doxyfile.in
